specs/admin-dashboard/validation-assets/run-8/output/A06-create-admin-age.txt
Source check — "age: 18" present: true

CLI output (exit 1):
npm warn Unknown user config "always-auth". This will stop working in the next major version of npm.
npm warn Unknown user config "email". This will stop working in the next major version of npm.
node:net:1918
      const error = new UVExceptionWithHostPort(rval, 'listen', address, port);
                    ^

Error: listen EPERM: operation not permitted /tmp/claude/tsx-502/94877.pipe
    at Server.setupListenHandle [as _listen2] (node:net:1918:21)
    at listenInCluster (node:net:1997:12)
    at Server.listen (node:net:2119:5)
    at file:///Users/antonioduarteruiz/personal/sportykids/node_modules/tsx/dist/cli.mjs:53:31537
    at new Promise (<anonymous>)
    at createIpcServer (file:///Users/antonioduarteruiz/personal/sportykids/node_modules/tsx/dist/cli.mjs:53:31515)
    at async file:///Users/antonioduarteruiz/personal/sportykids/node_modules/tsx/dist/cli.mjs:55:459 {
  code: 'EPERM',
  errno: -1,
  syscall: 'listen',
  address: '/tmp/claude/tsx-502/94877.pipe',
  port: -1
}

Node.js v24.13.1

